<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/search_root_constraint"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".features.product.ui.ProductSearchActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/search_toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/saerch_toolbar_constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="16dp">


            <EditText
                    android:id="@+id/search_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:fontFamily="@font/nunito"
                    android:hint="@string/product_search"
                    android:imeOptions="actionSearch"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_toolbar"/>
    <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp" app:srcCompat="@drawable/ic_not_found"
            android:id="@+id/search_not_found"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="@+id/search_recycler"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/product_search_not_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/search_not_found_text"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/search_not_found"
            app:layout_constraintEnd_toEndOf="@+id/search_not_found"
            app:layout_constraintStart_toStartOf="@+id/search_not_found" android:fontFamily="@font/nunito"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_progress" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/search_recycler" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@+id/search_recycler"
            app:layout_constraintStart_toStartOf="@+id/search_recycler" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/loading_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/search_progress_text"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/search_progress"
            app:layout_constraintStart_toStartOf="@+id/search_progress"
            app:layout_constraintEnd_toEndOf="@+id/search_progress" android:fontFamily="@font/nunito"/>
</androidx.constraintlayout.widget.ConstraintLayout>