<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/home_root_constraint"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".features.home.ui.HomeFragment">

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home_progress_bar"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/loading_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/home_progress_text"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/home_progress_bar"
            app:layout_constraintEnd_toEndOf="@+id/home_progress_bar"
            app:layout_constraintStart_toStartOf="@+id/home_progress_bar" android:fontFamily="@font/nunito"/>
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/home_toolbar_constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <ImageButton
                    android:id="@+id/home_fav_img_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_favorite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <ImageButton
                    android:id="@+id/home_book_img_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_bookmark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <androidx.cardview.widget.CardView
                    android:id="@+id/home_search_card"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp"
                    app:cardMaxElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/home_book_img_btn"
                    app:layout_constraintStart_toEndOf="@+id/home_fav_img_btn"
                    app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                        android:id="@+id/home_search_linear"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingStart="8dp">

                    <ImageView
                            android:id="@+id/home_search_image"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="8dp"
                            android:src="@drawable/ic_search"/>

                    <TextView
                            android:id="@+id/home_search_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/home_search"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView android:layout_width="match_parent"
                                           android:layout_height="0dp"
                                           android:fillViewport="true" android:id="@+id/home_nested"
                                           app:layout_constraintEnd_toEndOf="parent"
                                           app:layout_constraintStart_toStartOf="parent"
                                           app:layout_constraintBottom_toBottomOf="parent"
                                           app:layout_constraintTop_toBottomOf="@+id/home_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="match_parent"
                                                           android:id="@+id/home_sub_constraint">

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/home_category"
                      android:id="@+id/home_category_label"
                      android:fontFamily="@font/nunito_sans_bold"
                      android:textSize="@dimen/home_list_title"
                      android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
                      android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintHorizontal_bias="0.0"/>


            <androidx.recyclerview.widget.RecyclerView
                    android:padding="8dp"
                    android:id="@+id/home_category_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/home_category_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/view"
                    android:id="@+id/home_view_one" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/home_category_recycler"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/home_products_promo"
                      android:id="@+id/home_promo_label"
                      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                      app:layout_constraintHorizontal_bias="0.0" android:fontFamily="@font/nunito_sans_bold"
                      android:textSize="@dimen/home_list_title" android:layout_marginTop="16dp"
                      app:layout_constraintTop_toBottomOf="@+id/home_view_one"/>
            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/home_promo_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="72dp" app:layout_constraintVertical_bias="0.0"
                    android:id="@+id/home_product_recycler" android:padding="8dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>